public interface IObserver
{
    void Update();
} 